--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: 20
       - name: Build Quartz
         run: |
-          npm ci
+          npm ci --legacy-peer-deps
           npx quartz build
       - name: Sync files
         uses: pressidium/lftp-mirror-action@v1
