--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@floating-ui/dom": "^1.6.13",
     "@myriaddreamin/rehype-typst": "^0.5.4",
     "@napi-rs/simple-git": "0.1.19",
+    "@rehype-pretty/transformers": "https://pkg.pr.new/@rehype-pretty/transformers@1cf8845",
     "@tweenjs/tween.js": "^25.0.0",
     "async-mutex": "^0.5.0",
     "chalk": "^5.4.1",
@@ -70,7 +71,7 @@
     "rehype-citation": "^2.2.2",
     "rehype-katex": "^7.0.1",
     "rehype-mathjax": "^7.1.0",
-    "rehype-pretty-code": "^0.14.0",
+    "rehype-pretty-code": "https://pkg.pr.new/rehype-pretty-code@1cf8845",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
@@ -86,7 +87,7 @@
     "satori": "^0.12.1",
     "serve-handler": "^6.1.6",
     "sharp": "^0.33.5",
-    "shiki": "^1.3.0",
+    "shiki": "^3.0.0",
     "source-map-support": "^0.5.21",
     "to-vfile": "^8.0.0",
     "toml": "^3.0.0",
